[tool.poetry]
name = "myutils"
version = "0.1.0"
description = ""
authors = ["Ryosuke Sato <ryosuke.sato.works@gmail.com>"]
packages = [
    { include = "myutils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
